Mon Feb 16 00:12:03 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_aclocal_m4): When processing -I options,
	directory is separate argument.  Test aclocali.test.

Fri Feb 13 14:35:39 1998  Ian Lance Taylor  <ian@cygnus.com>

	* automake.in (handle_texinfo): Correct condition for whether
	texinfo.tex is required.  [Test texinfo5.test]

Fri Feb 13 00:28:53 1998  Tom Tromey  <tromey@cygnus.com>

	* Released 1.2e.

	* Makefile.am: Removed bogus line.

Thu Feb 12 22:27:05 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (get_object_extension): Conditionally include .c.o
	rule from compile.am.
	(handle_dependencies): Generate correct code when including new
	depend2.am.
	(file_contents_with_transform): Better error reporting.
	* depend.am (MKDEP): Removed.
	(.deps/.P): Removed.  Don't include .deps/.P.
	* compile.am (.c.o): Now conditional on dependencies not being
	generated by compiles.
	* depend2.am (%.o): New rule.
	(.deps/%.P): Removed.

	* tags.am (TAGS): Uniquify list of files.  From Harlan Stenn.

	* aclocal.in (scan_m4_files): Reverse-sort keys when constructing
	`search' function.  From Johan Danielsson.

Tue Sep 16 14:13:15 1997  Paul D. Smith  <psmith@baynetworks.com>

	* automake.in: Create new option --generate-deps.  This option has
	automake generate a .dep_segment file containing just the
	dependencies created from the .P list.  This is needed to maintain
	other makefiles that automake doesn't deal with (Makefile.DOS,
	SMakefile, etc.)
	* automake.texi (Invoking Automake): Document it.

Thu Feb 12 19:45:16 1998  Tom Tromey  <tromey@cygnus.com>

	* aclocal.in (scan_configure): Tightened regexp a bit.  Test
	whoami.test.  From Johan Danielsson.

	Report from H.J. Lu.
	* automake.in (output_yacc_build_rule): Don't write rule to create
	`.h' file.
	(handle_yacc_lex_cxx): Generate rule to build each .h file.

	* automake.in (handle_options): Set readme-alpha and check-news
	for Gnits after main processing.  Test alpha.test.  From Jim