@@ -158,7 +158,7 @@ sub parse_arguments
 	elsif ($arglist[0] eq '--version')
 	{
 	    print "aclocal (GNU $PACKAGE) $VERSION\n\n";
-	    print "Copyright (C) 1996, 1997, 1998 Free Software Foundation, Inc.\n";
+	    print "Copyright (C) 1998 Free Software Foundation, Inc.\n";
 	    print "This is free software; see the source for copying conditions.  There is NO\n";
 	    print "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n\n";
 	    print "Written by Tom Tromey <tromey\@cygnus.com>\n";
