@@ -1,5 +1,5 @@
 ## automake - create Makefile.in from Makefile.am
-## Copyright (C) 1994, 1995, 1996, 1997 Free Software Foundation, Inc.
+## Copyright (C) 1994, 1995, 1996, 1997, 1998 Free Software Foundation, Inc.
 
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -21,8 +21,8 @@
 ## Makefile.in if `automake' is not passed the `--include-deps' flag.
 
 ## We must create the .deps directory if it doesn't exist.  We do it
-## in this strange way because of a buglet in make -- it won't try to
-## create .deps/.P if the .deps directory doesn't exist.
+## in this strange way to make sure the .deps directory exists,
+## without trying to run mkdir for each compilation.
 DEPS_MAGIC := $(shell mkdir .deps > /dev/null 2>&1 || :)
 
 -include $(DEP_FILES)
