@@ -1,3 +1,10 @@
+Mon Feb 23 13:38:56 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* aclocal.in (parse_arguments): Only put current year in --version
+	output.
+	* automake.in (parse_arguments): Only put current year in
+	--version output.
+
 Mon Feb 16 00:12:03 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (handle_aclocal_m4): When processing -I options,
